* Business hours show single day times with [gd_post_meta] shortcode - ADDED
* Images can now store full URL during import for external images - ADDED
* %%post_count%% shows null when no post found - CHANGED
* GD Listings pagination not working when with_pics_only enabled - FIXED
* Map marker not bouncing when OpenStreetMaps enabled with AUI Bootstrap style - FIXED

= 2.1.0.6 =
* Detail page image slider is not working with Divi theme - FIXED
* Default category always shows first option selected with Bootstrap style - FIXED
* Unable to translate street field default placeholder - FIXED
* Elementor custom skin loop overwrites $wp_query - FIXED
* Search form AUI does not keep padding margins when CPT select changed - FIXED
* Backend re-arrange post images order not working with AUI - FIXED
* Classifieds dummy data not using blocks when Gutenberg in use - FIXED
* Category widget now has option to align items of partial rows - ADDED
* Review output avatar now set as position relative to prevent theme CSS breaking alignment - CHANGED
* Map on set manual location popup not working with lazy load - FIXED
* Map Category select overflow not scrolling - FIXED
* Multiselect checkbox field with AUI is not working in add listing - FIXED
* GD Listings pagination next page link is not working with AUI style - FIXED

= 2.1.0.5 =
* JavaScript error breaks Divi visual builder when bootstrap style enabled - FIXED
* Edit image title/caption is not working in backend edit post page - FIXED
* Lightbox gallery on mobile can vertically stretch images - FIXED
* Avada Builder not compatible with new AUI styles, revert to legacy styles if active - FIXED
* Map bounce on listing hover is not working with bootstrap style - FIXED
* Lightbox gallery on mobile can vertically stretch images - FIXED
* Added filters to search input arguments - ADDED
* Divi visual editor shows "field key is missing" for badge - FIXED
* Reviews, link to author profile instead of author URL input - CHANGED